# Skypro

./: .gitignore  README.md  regular_expressions.md
homeWork/Part_1/home_work_1_English/: science_english.py
homeWork/Part_1/home_work_4_final_tasks/: final_tasks.py
homeWork/Part_2/virtual_environment/: .flake8  pyproject.toml
homeWork/home_work_1_English/: science_english.py
homeWork/home_work_1_def/: home_work_1_def.py
homeWork/home_work_2_lists/: home_work_1_English_lists.py
homeWork/home_work_4_final_tasks/: final_tasks.py
homeWork/learninEnglish/: algorithmLearn.drawio
homeWork/melonTypes/: arithmeticData.py  learnByTime.py
homeWork/todoLessons/: giftFromJohn.drawio  metods.py  test.py  tripToItally.drawio
lessonsLive/: collPython.drawio
