[tool.poetry]
name = "virtual-environment"
version = "0.1.0"
description = "This is a homework project with a virtual environment."
authors = ["Maksim Andreev <andrianov_maksim@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.def.dependencies]
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
